--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pypdf = "^4.3.1"
 sentence-transformers = "^3.0.1"
 chromadb = "^0.5.5"
 langchain-chroma = "^0.1.2"
+langgraph = "^0.2.3"
+pyodbc = "^5.1.0"
 
 
 [build-system]
